FIX: Align ZON logo with headline in video bar

--- a/sass/web.site/modules/video/_video-stage-heading.sass
+++ b/sass/web.site/modules/video/_video-stage-heading.sass
@@ -18,9 +18,11 @@
 		top: remify($small--px)
 
 	&__logo
-		height: remify(20px)
-		vertical-align: sub
-		width: remify(136px)
+		height: remify(18px)
+		margin: remify(1px 0 0 3px)
+		vertical-align: top
+		width: remify(168px)
 		+respond-min($break-phablet-min)
-			width: remify(197px)
-			height: remify(27px)
+			margin: remify(4px 0 0 3px)
+			width: remify(187px)
+			height: remify(20px)
